Closed
Bug 1074743
Opened 10 years ago
Closed 10 years ago
Background thumbnailer captures pictures with black right and bottom borders
Categories
(Firefox :: General, defect)
Tracking
()
People
(Reporter: ttaubert, Assigned: ttaubert)
References
Details
(Keywords: regression)
Attachments
(2 files)
330.34 KB,
image/png
|
Details | |
6.67 KB,
patch
|
jimm
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
Not exactly sure when this started but pages solely captured by the background thumbnailer have a quite large right and bottom left border.
Assignee | ||
Updated•10 years ago
|
Flags: firefox-backlog+
Assignee | ||
Comment 1•10 years ago
|
||
Last good nightly: 2014-07-15
First bad nightly: 2014-07-16
Pushlog:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=095d2a9c2be5&tochange=869971ad9fd6
Assignee | ||
Updated•10 years ago
|
Keywords: regressionwindow-wanted
Comment 2•10 years ago
|
||
My money is on bug 1022612, but then again, that's a cheap shot considering the number of patches...
Assignee | ||
Comment 3•10 years ago
|
||
Yeah, had the same suspicion. Bisecting currently, almost done :)
Updated•10 years ago
|
Flags: qe-verify?
Assignee | ||
Comment 4•10 years ago
|
||
The first bad revision is:
changeset: 193934:692a0f99d09d
user: Mike Conley <mconley@mozilla.com>
date: Mon Jul 14 13:22:26 2014 -0400
summary: Bug 1002354 - Proxy nsIScreenManager and nsIScreen's from the child process to the parent process, with caching. r=roc,jimm,smichaud,snorp.
Blocks: 1002354
Flags: qe-verify? → qe-verify+
Comment 5•10 years ago
|
||
Hrm. Strange. I don't know much about how we thumbnail... do we do it out of process? Would the thumbnailing system somehow use the nsScreenManagerProxy I introduced in bug 1002354?
Flags: needinfo?(ttaubert)
Assignee | ||
Comment 6•10 years ago
|
||
Yes, we indeed use a remote browser. I will investigate later when I find time what's going wrong here.
Flags: needinfo?(ttaubert)
Comment 7•10 years ago
|
||
I'm also seeing this bug, though only on certain thumbnails. I see it on the Zimbra sign-in page thumbnail, for example. But not for reddit.com.
Assignee | ||
Comment 8•10 years ago
|
||
You'll only see it for pages captured with the background service. The bg service kicks in when we don't have a thumbnail captured while browsing the site, that could be because it's simply missing or because we didn't take one for privacy reasons.
Assignee | ||
Comment 9•10 years ago
|
||
Looks like nsIScreenManager.primaryScreen.GetRectDisplayPix() reports device pixels, not display pixels. Likely a retina-only bug where it reports 2x the size compared to before bug 1002354 landed.
Assignee | ||
Comment 10•10 years ago
|
||
Works fine for me now and returns display pixels when requested.
Assignee: nobody → ttaubert
Status: NEW → ASSIGNED
Attachment #8497900 -
Flags: review?(jmathies)
Attachment #8497900 -
Flags: feedback?(mconley)
Assignee | ||
Comment 11•10 years ago
|
||
[Tracking Requested - why for this release]:
I think that the fix here is quite simple and the issue is very visual. For mostly OS X users - but actually all users with HiDPI devices - the background thumbnailer will capture images with large black borders. The issue has been introduced with Firefox 33.
Iteration: --- → 35.3
Points: --- → 5
status-firefox33:
--- → affected
status-firefox34:
--- → affected
status-firefox35:
--- → affected
tracking-firefox33:
--- → ?
tracking-firefox34:
--- → ?
Comment 12•10 years ago
|
||
The build of beta 9 starts tomorrow. This will have to land soon!
Assignee | ||
Comment 13•10 years ago
|
||
Yeah, I know :/ Let's see.
Updated•10 years ago
|
Attachment #8497900 -
Flags: review?(jmathies) → review+
Assignee | ||
Comment 14•10 years ago
|
||
Assignee | ||
Comment 15•10 years ago
|
||
Comment on attachment 8497900 [details] [diff] [review]
0001-Bug-1074743-Forward-display-pixel-values-to-screen-p.patch
Sorry, Mike. I'm sure you would have liked it! :)
Attachment #8497900 -
Flags: feedback?(mconley)
Comment 16•10 years ago
|
||
I do like it! :)
I guess we just need to make sure to request uplift approval if we want this stuff. And, uh, "my bad" on failing to provide those numbers the first time.
Updated•10 years ago
|
QA Contact: cornel.ionce
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 35
Updated•10 years ago
|
Assignee | ||
Comment 18•10 years ago
|
||
Comment on attachment 8497900 [details] [diff] [review]
0001-Bug-1074743-Forward-display-pixel-values-to-screen-p.patch
Approval Request Comment
[Feature/regressing bug #]: bug 1002354
[User impact if declined]: large black right and bottom borders on some tiles of the newtab page
[Describe test coverage new/current, TBPL]: no test coverage for the thumbnails itself, Nightly is looking great though
[Risks and why]: Low-risk change
[String/UUID change made/needed]: None.
Attachment #8497900 -
Flags: approval-mozilla-beta?
Attachment #8497900 -
Flags: approval-mozilla-aurora?
Comment 19•10 years ago
|
||
Tim, If regressions are caused by the bug, what could they be? Thanks
Flags: needinfo?(ttaubert)
Assignee | ||
Comment 20•10 years ago
|
||
(In reply to Sylvestre Ledru [:sylvestre] from comment #19)
> Tim, If regressions are caused by the bug, what could they be? Thanks
I think... regressions introduced by that bug would affect the nsIScreenManager API but only if it is used from a remote process. The only things I know that use it in Firefox from a remote process would probably be the background thumbnailer and e10s. The impact of any regression should thus be fairly small.
Flags: needinfo?(ttaubert)
Updated•10 years ago
|
Updated•10 years ago
|
Attachment #8497900 -
Flags: approval-mozilla-beta?
Attachment #8497900 -
Flags: approval-mozilla-beta+
Attachment #8497900 -
Flags: approval-mozilla-aurora?
Attachment #8497900 -
Flags: approval-mozilla-aurora+
Assignee | ||
Comment 21•10 years ago
|
||
Comment 22•10 years ago
|
||
I was unable to reproduce the initial issue on Nightly 2014-07-16 and Nightly 2014-09-29.
Tim, cam you please confirm the fix for this bug?
Flags: needinfo?(ttaubert)
QA Contact: cornel.ionce → camelia.badau
Assignee | ||
Comment 23•10 years ago
|
||
Verified manually as fixed for Nightly and Aurora. I assume that we don't distribute the Beta build yet? Is it built yet? Did this make b9?
Status: RESOLVED → VERIFIED
Flags: needinfo?(ttaubert)
Comment 24•10 years ago
|
||
(In reply to Tim Taubert [:ttaubert] (limited availability, work week) from comment #23)
> Verified manually as fixed for Nightly and Aurora. I assume that we don't
> distribute the Beta build yet?
Yes: https://ftp.mozilla.org/pub/mozilla.org/firefox/releases/33.0b9/
> Is it built yet?
yes
> Did this make b9?
yes
hope this helps!
Assignee | ||
Comment 25•10 years ago
|
||
Got a new version now. Fixed on beta as well!
You need to log in
before you can comment on or make changes to this bug.
Description
•