Bug 1074743 - Forward display pixel values to screen proxies r=jimm a=sylvestre