widget/xpwidgets/ScreenProxy.h
@@ -29,10 +29,18 @@ public:
                        int32_t* aTop,
                        int32_t* aWidth,
                        int32_t* aHeight) MOZ_OVERRIDE;
+    NS_IMETHOD GetRectDisplayPix(int32_t* aLeft,
+                                 int32_t* aTop,
+                                 int32_t* aWidth,
+                                 int32_t* aHeight) MOZ_OVERRIDE;
     NS_IMETHOD GetAvailRect(int32_t* aLeft,
                             int32_t* aTop,
                             int32_t* aWidth,
                             int32_t* aHeight) MOZ_OVERRIDE;
+    NS_IMETHOD GetAvailRectDisplayPix(int32_t* aLeft,
+                                      int32_t* aTop,
+                                      int32_t* aWidth,
+                                      int32_t* aHeight) MOZ_OVERRIDE;
     NS_IMETHOD GetPixelDepth(int32_t* aPixelDepth) MOZ_OVERRIDE;
     NS_IMETHOD GetColorDepth(int32_t* aColorDepth) MOZ_OVERRIDE;
 
@@ -49,7 +57,9 @@ private:
     int32_t mPixelDepth;
     int32_t mColorDepth;
     nsIntRect mRect;
+    nsIntRect mRectDisplayPix;
     nsIntRect mAvailRect;
+    nsIntRect mAvailRectDisplayPix;
     bool mCacheValid;
     bool mCacheWillInvalidate;
 };
